1.3.7
	+ Create .V2 profile directories. Windows Vista looks for them.
	+ remove extendedBackup, data files must be backuped using ebackup
1.3.6
	+ bugfix: do not allow netbios names longer than 15 characters
1.3.4
	+ bugfix: some samba actions never appeared in the access log
1.3.3
	+ bugfix: we dont consults users when users is not configured in EBox::Samba::existsShareResource
1.3.1
	+ bugfix: use right number for Domain Computers group
1.3.0
	+ bugfix: keep sambaMinPwdLength attribute
1.1.30
	+ bugfix: add user works if quota is disabled
	+ bugfix: replaced storeElementByName with store to avoid bug when restoring
1.1.20
	+ samba allows the use of internal virtual ifaces now
	+ bugfix: importFromLdif was calling a maethod that was removed in a previous merge
1.1.10
	+ Only update sambaPaths on users with sambaSamAccount object
	class
	+ UI imrpovement: in general setting some fileds are disabled when
	PDC is not selected
1.1
	+ Bugfix: issue with codepages on shares
	+ Home drive letter can be changed now from general settings
	+ Added new PDC model with password settings
	+ Use the new row() and ids() API
	+ Windows user's profiles are backed up only in extended backups
	+ Enable quota support again
	+ Bugfix: when importing data from ldiff we assure that the
	default group is created before any group assignment to avoid
	'group not existent' errors

0.12.101
	+ Bugfix: set force directory mode and force create mode to 0660 in shares
0.12.100
	+ Admin user method is more robust in face of user's incomplete
	groups membership
	+ Bugfix: `printers` method returns an empty list when
	`ebox-printers` package is not installed
	+ Add per-user disk quota
0.12.99
	+ New release
0.12.6.101
	+ Bugfix. roaming profiles are not created automatically when they are
	disabled
0.12.6.100
	+ Support for external printers configured with CUPS
	+ Bugfix. Set users and groups suffix properly in smb.conf
0.12.5