@@ -4,7 +4,7 @@ Stubdir = @STUBSPATH@/samba
 
 
 nobase_Stub_DATA = smb.conf.mas ldap.conf.mas smbldap.conf.mas smbldap_bind.conf.mas \
-    vscan-clamav.conf.mas
+    vscan-clamav.conf.mas recycle.conf.mas
 
 EXTRA_DIST = $(nobase_Stub_DATA)
 
