@@ -1,0 +1,35 @@
+[recycle]
+
+; Name of the recycle bin directory
+; If a full path like /tmp/foo is entered,
+; the same Recycle Bin will be used for all the shares
+repository = Recycle Bin
+
+; Permissions of the recycle bin directory
+directory_mode = 0700
+
+; Keep directory structure
+keeptree = Yes
+
+; Keep copies if a file is deleted more than once
+versions = Yes
+
+; Files that are larger than the number of bytes
+; specified by this parameter will not be put into
+; the Recycle Bin. (0 = disabled)
+maxsize = 0
+
+; List of files that should not be stored when deleted,
+; but deleted in the regular way.
+;exclude = *.tmp|*.temp
+
+; When files from these directories are deleted,
+; they are not put into the recycle bin but are deleted
+; in the regular way.
+excludedir = /tmp|/var/tmp
+
+; Specifies a list of paths
+; (wildcards such as * and ? are supported)
+; for which no versioning should be used.
+; Only useful when versions is enabled.
+;noversions = *.foo|*.bar
