@@ -1,3 +1,5 @@
+HEAD
+	+ Added support for Recycle Bin in shares
 1.3.7
 	+ Create .V2 profile directories. Windows Vista looks for them.
 	+ remove extendedBackup, data files must be backuped using ebackup
